Feature: Add nginx conf, service file and updates some items in docker-compose.yaml

--- a/.example.env
+++ b/.example.env
@@ -11,6 +11,8 @@ DRONE_SERVER_HOST=<set_drone_host_name>
 DRONE_SERVER_PROTO=<set_http_schema>
 DRONE_DATABASE_DRIVER=postgres
 DRONE_DATABASE_DATASOURCE=postgres://<DB_USER>:<DB_PASSWORD>@<DB_HOST>:<DB_PORT>/<DB_NAME>?sslmode=disable
+DRONE_HTTP_SSL_HOST=<set_ssl_host>
+DRONE_HTTP_STS_SECONDS=315360000
 
 # Drone runner settings
 DRONE_RUNNER_CAPACITY=<set_runner_capacity>
