Update: switch to using GITHUB

--- a/.example.env
+++ b/.example.env
@@ -1,7 +1,6 @@
-# GITEA settings
-DRONE_GITEA_CLIENT_ID=<set_client_id>
-DRONE_GITEA_SERVER=<set_gitea_host>
-DRONE_GITEA_CLIENT_SECRET=<set_client_secret>
+# GITHUB settings
+DRONE_GITHUB_CLIENT_ID=<set_client_id>
+DRONE_GITHUB_CLIENT_SECRET=<set_client_secret>
 
 # Drone server settings
 TZ=Europe/Moscow
